--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
     "baileys": "github:WhiskeySockets/baileys#e254718",
+    "dotenv": "^16.4.7",
     "pino": "^9.6.0",
     "qrcode-terminal": "^0.12.0"
   },
