--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@google/generative-ai": "^0.22.0",
     "baileys": "github:SoursopID/Baileys#859bb1f972d3264ea4aada140e104dcbe0d3b7b4",
     "dotenv": "^16.4.7",
+    "mongodb": "6.15",
     "pino": "^9.6.0",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
