--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/app.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "bun src/app.js"
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/SoursopID/Suika#readme",
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
-    "baileys": "github:SoursopID/Baileys#859bb1f972d3264ea4aada140e104dcbe0d3b7b4",
+    "baileys": "github:SoursopID/Baileys#9a175a6",
     "dotenv": "^16.4.7",
     "mongodb": "6.15",
     "pino": "^9.6.0",
